# salt-miner

./: Cargo.toml  README.md
.cargo/: config.toml
sample/: creation_code.hex
src/: benchmark.rs  config.rs  creation_code.rs  main.rs
src/shaders/: create2_search.wgsl
