[package]
name = "salt_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.3"
hex = "0.4"

[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"                # Link-Time Optimization (aggressive inlining)
codegen-units = 1          # Single codegen unit (better optimization)
panic = "abort"            # Smaller binary, faster execution
strip = true               # Remove debug symbols