[package]
name = "salt_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.3"
hex = "0.4"

# ARM-optimized Keccak256 for faster hashing
sha3 = { version = "0.10", features = ["asm"] }
digest = "0.10"

# GPU acceleration with Metal (macOS/iOS)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
cocoa = "0.26"

[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"                # Link-Time Optimization (aggressive inlining)
codegen-units = 1          # Single codegen unit (better optimization)
panic = "abort"            # Smaller binary, faster execution
strip = true               # Remove debug symbols